[package]
name = "srt_whep"
description = "SRT to WHEP (WebRTC)"
repository = "https://github.com/Eyevinn/srt-whep"
license = "Apache-2.0"
version = "1.3.0"
authors = ["Kun Wu <kun.wu@eyevinn.se>; Jonas Birmé <jonas.birme@eyevinn.se>"]
edition = "2021"
exclude = ["docs/*"]
rust-version = "1.84"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "srt-whep"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.228"
config = { version = "0.15", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
reqwest = { version = "0.12.25", default-features = false, features = [
  "json",
  "rustls-tls",
] }
log = "0.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
thiserror = "2.0.18"
serde-aux = "4"
unicode-segmentation = "1.12.0"
anyhow = "1.0.101"
validator = "0.19.0"
tracing-actix-web = "0.7"
secrecy = { version = "0.10", features = ["serde"] }
futures = "0.3.32"
glib = "0.20.7"
gstreamer = "0.23.4"
gstreamer-pbutils = "0.23.4"
gst-plugin-webrtc = "0.13.4"
gst-plugin-rtp = "0.13.7"
clap = { version = "4.5.58", features = ["derive"] }
actix-cors = "0.7.1"
serde_json = "1.0.149"
toml = "0.8.19"
timed-locks = "0.1.1"
async-trait = "0.1.89"
tokio-async-drop = "0.1.0"
event-listener = "5.4.1"

[dev-dependencies]
once_cell = "1.21.3"
claims = "0.8.0"
reqwest = { version = "0.12.25", features = ["json"] }
