[package]
name = "srt_whep"
description = "SRT to WHEP (WebRTC)"
repository = "https://github.com/Eyevinn/srt-whep"
license = "Apache-2.0"
version = "1.3.0"
authors = ["Kun Wu <kun.wu@eyevinn.se>; Jonas Birmé <jonas.birme@eyevinn.se>"]
edition = "2021"
exclude = ["docs/*"]
rust-version = "1.84"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "srt-whep"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
thiserror = "2.0.11"
anyhow = "1.0.95"
tracing-actix-web = "0.7"
futures = "0.3.31"
glib = "0.20.7"
gstreamer = "0.23.4"
gstreamer-pbutils = "0.23.4"
gst-plugin-webrtc = "0.13.4"
gst-plugin-rtp = "0.13.4"
clap = { version = "4.5.27", features = ["derive"] }
actix-cors = "0.7.0"
serde_json = "1.0.137"
timed-locks = "0.1.1"
async-trait = "0.1.85"

[dev-dependencies]
once_cell = "1.20.2"
claims = "0.8.0"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["test-util"] }
